<resources>
    <string name="app_name">SetupWizard</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="welcome_to_grapheneos">Welcome to GrapheneOS</string>
    <string name="grapheneos_icon">GrapheneOS icon</string>
    <string name="grapheneos_desc">Privacy and security, crafted for your mobile device, usable by everyone.</string>
    <string name="lets_setup_your_device">Let\'s set up your device in a few steps.</string>
    <string name="lets_setup_your_profile">Let\'s set up your user profile in a few steps.</string>
    <string name="english_united_states">English (United States)</string>
    <string name="accessibility">Accessibility</string>
    <string name="emergency_call">Emergency call</string>
    <string name="connect_to_wi_fi">Connect to Wi-Fi</string>
    <string name="set_up_without_wi_fi">Set up without Wi-Fi</string>
    <string name="connect">Connect</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="location_services">Location services</string>
    <string name="location_access_desc">Allow apps that have asked your permission to use your location information. This may include your current location and past locations.</string>
    <string name="restore_apps_and_data"><![CDATA[Restore apps & data]]></string>
    <string name="data_restore_desc">If you have a backup from you last GrapheneOS device, you can restore it here.</string>
    <string name="you_re_all_set_now">You\'re all set now!</string>
    <string name="device_setup_done_desc">You\'re ready to start using your device</string>
    <string name="profile_setup_done_desc">You\'re ready to start using your user profile</string>
    <string name="set_up_a_secondary_unlock_method">Set up a secondary unlock method</string>
    <string name="set_up_fingerprint_unlock">Set up fingerprint unlock</string>
    <string name="optionally_set_up_face_unlock">Optionally set up face unlock</string>
    <string name="set_up">Set up</string>
    <string name="start">Start</string>
    <string name="date_and_time">Date and time</string>
    <string name="date_and_time_desc">Set your time zone and adjust current date and time if needed</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="time_zone">Time zone</string>
    <string name="select_time_zone">Select time zone</string>
    <string name="select_a_network">Select a network</string>
    <string name="cancel">Cancel</string>
    <string name="restore">Restore</string>
    <string name="swipe_gestures_title">Swipe to navigate your phone</string>
    <string name="swipe_gestures_desc">Learn gestures to go home, go back and switch between apps</string>
    <string name="try_it">Try it</string>
    <string name="oem_unlocked_warning">The boot loader is unlocked and software integrity can not be guaranteed. Any data stored on this device may be available to attackers. Do not store any sensitive data on this device.</string>
    <string name="visit_this_link_on_another_device">Visit this link on another device:</string>
    <string name="oem_lock_url" translatable="false">grapheneos.org/UBL</string>
    <string name="oem_unlocked_device_setup_confirmation">Boot loader is unlocked which renders the device insecure as displayed in the warning. Do you still want to continue setting up?</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes_continue">Yes, continue</string>
    <string name="no_reboot_to_bootloader">No, reboot to bootloader</string>
    <string name="yes_disable_now">Yes, disable now</string>
    <string name="no_disable_later">No, I will disable it later</string>
    <string name="oem_unlock_disabling_suggestion">OEM unlocking is enabled, we recommend disabling.
        Would you like to disable now?
        You can also disable later from developer options in Settings app.</string>
    <string name="lock_your_bootloader">Lock your bootloader</string>
    <string name="oem_unlock_fullscreen_desc">
        The bootloader is unlocked and software integrity
        can not be guaranteed. Any data stored on this device may be available to attackers.
        Do not store any sensitive data on this device.\n\nLocking the bootloader at a later stage
        will wipe all the data on this device. To keep the data safe and secure we advice you to
        lock the bootloader before setting up the device.\n\nTo lock your bootloader, press
        \"Reboot to bootloader\" and visit this link on another device for instructions:
    </string>
    <string name="reboot_to_bootloader">Reboot to bootloader</string>
    <string name="continue_without_unlocking">Continue without unlocking</string>
    <string name="continue_without_unlocking_timer">Continue without unlocking (%d)</string>
    <string name="oem_unlock_ack_risks">I understand the security risks of not locking my bootloader.</string>
</resources>
